public/assets/css/style.css
/* ... */
@media only screen
and (max-device-width : 480px)
{
    .button-my-pro-list{
        margin-left: 25%;
        margin-bottom: 11px;
    }

    .call-bri{
        font-size: 8pt;
        border-radius: 50px;
        margin-top: -45px;
        margin-left: 0px;
        margin-right: 0;
        color: #1f3f81;
    }
    .image_wrap{
        width: 50px;
        margin: 10px -15px;
        height: 30px;
    }
    .left100{
        margin-left: -10px !important;
    }
    .img-credit{
        width: 50px;
    }
    .credit-input{
        height: 30px;
    }
    .btn-transparent{
        width: 92vw;
        padding: 10px;
    }
}
@media only screen
and (min-device-width : 480px)
and (max-device-width : 992px)
{
    .button-my-pro-list{
        display: block;
        margin-left: 35%;
        margin-right: auto;
        margin-bottom: 11px;
    }
    .span-pic{
        width: 50px !important;
    }
    .call-bri{
        font-size: 10pt;
        border-radius: 50px;
        margin-top: -45px;
        margin-left: 0px;
        margin-right: 0;
        color: #1f3f81;
    }
}

@media only screen
and (min-device-width : 640px)
and (max-device-width : 1199px)
{

    .sm-owl-item{
        width: 20vw !important;
        margin: 10px;
    }

    .span-pic{
        width: 50px !important;
    }
    .span-place{
        margin-top: 30px;
        font-size: 15pt;
    }
    .span-map{
        font-size: 10pt !important;
    }
    .span-detail{
        height: 15px !important;
    }

    .left100{
        margin-left: 50px;
    }

    .credit-input{
        height: 40px;
    }
    .btn-transparent{
        width: 200%;
        padding: 10px;
    }
}

@media only screen
and (min-device-width : 641px)
and (max-device-width : 992px){
    .image_wrap{
        width: 100px;
        margin: 10px -10px;
        height: 70px;
    }
    .left100{
        margin-left: 60px;
    }
    .img-credit{
        width: 100px !important;
    }
    .credit-input{
        height: 40px;
    }
    .btn-transparent{
        width: 200%;
        padding: 10px;
    }
}

@media only screen
and (min-device-width : 992px){
    .navbar-brand > img {
        margin-top: 15px;
    }

}
@media only screen
and (max-device-width : 992px){
    .profile-big{
        display: block;
        top: -5px;
        right: 50px;
    }
    .dropdown-toggle:hover + .dropdown-menu{
        display: block !important;
        top: 50px;
    }
    input#credit-toggle:checked ~ .credit-wrapper {
        top: -935px;
    }
}
@media only screen
and (min-device-width : 400px)
and (max-device-width : 640px){
    input#credit-toggle:checked ~ .credit-wrapper {
        top: -910px;
    }
}
/* Update Fikri 17/01/2018 - Fix Credit simulation position */
@media only screen
and (min-device-width : 1440px)
and (max-device-width : 1919px){
    input#credit-toggle:checked ~ .credit-wrapper {
        top: -52vh;
    }
}
@media only screen
and (min-device-width : 1920px){
        top: -43vh;
    }
}
/* end of update 17/01/2018 */

